perf: stream api can be simplified here